libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-tuple-type.jsonc
//@ run: fail
//@ description: any tuple with a type annotation should fail
[
  "::kernel::special_form::use",
  "::math",
  { "#tuple": ["::math::sub"], "#type": "Number" },
  //~^ ERROR garble barble
  "x"
]
